alignment bug

--- a/frontend/src/app/modules/complaints/pages/manage-complaints/component/open-complaint/open-complaint.component.css
+++ b/frontend/src/app/modules/complaints/pages/manage-complaints/component/open-complaint/open-complaint.component.css
@@ -75,12 +75,14 @@
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.04em;
-    flex-basis: 80%;
+    /* flex-basis: 80%; */
+    width: 80%;
     word-wrap: break-word;
 }
 
 .time {
-    flex-basis: 15%;
+    /* flex-basis: 15%; */
+    width: 15%;
     font-size: 10px;
     opacity: 0.5;
     display: flex;
